# py-midiplexer

./: .gitignore  pyproject.toml  requirements.txt
py_midiplexer/: __main__.py  client.py  config.py  controller.py  exceptions.py  main.py
py_midiplexer/includes/: luppputils.py
py_midiplexer/includes/nubia/: exitcmd.py  nubia_context.py
src/py_midiplexer/: __main__.py  client.py  controller.py  py_midiplexer.py  track.py
src/py_midiplexer/includes/nubia/: commands.py  exit.py  exitcmd.py  nubia_context.py  nubia_plugin.py  nubia_statusbar.py
